k8s/deploy.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "test-web-server"
  labels:
    app.kubernetes.io/name: "test-web-server"
spec:
  selector:
    app.kubernetes.io/name: "test-web-server"
  ports:
    - name: "http"
      port: 9092
      protocol: "TCP"
      targetPort: "http"

---
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "test-web-server"
spec:
  policyTypes: ["Ingress"]
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "test-web-server"
  ingress:
    - {}

---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "test-web-server"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "test-web-server"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "test-web-server"
      annotations:
        promtail.io/collect: "true"
    spec:
      serviceAccountName: "test-web-server"
      automountServiceAccountToken: false
      containers:
        - name: "test-web-server"
          image: "shadowuser17/test-web-server:latest"
          imagePullPolicy: "Always"
          ports:
            - name: "http"
              protocol: "TCP"
              containerPort: 9092
          resources:
            requests:
              memory: "32Mi"
            limits:
              memory: "32Mi"
