k8s/network.yml
apiVersion: "networking.k8s.io/v1"
kind: "NetworkPolicy"
metadata:
  name: "test-web-server"
spec:
  policyTypes: ["Ingress"]
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "test-web-server"
  ingress:
    - {}
